force-app/src/objects/CTPISA__Local_VAT_Code__c.object
<CustomObject>
    <fields>
        <fullName>CTPISA__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Local VAT Codes</relationshipLabel>
        <relationshipName>Local_VAT_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Local VAT Codes</relationshipLabel>
        <relationshipName>Local_VAT_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Input_VAT_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Input VAT Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Local Input VAT Code</relationshipLabel>
        <relationshipName>Local_Input_VAT_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Output_VAT_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Local VAT Codes (Output VAT Code)</relationshipLabel>
        <relationshipName>Local_VAT_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Local VAT Code</label>
    <nameField>
        <displayFormat>LVC-{000000}</displayFormat>
        <label>Local VAT Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local VAT Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>